use java 11, added kibana to docker-compose